--- a/public/css/myStyle.css
+++ b/public/css/myStyle.css
@@ -1,4 +1,4 @@
-.logo_onfp{
+.logo_onfp {
     max-width: 50%;
     height: auto;
     max-height: 45vh;
@@ -11,4 +11,12 @@
     color: aliceblue;
     height: 100vh;
     margin-top: 30px;
-    }
+}
+
+.header {
+    background-size: cover;
+    background-repeat: no-repeat;
+    color: aliceblue;
+    height: 100vh;
+    margin-top: 30px;
+}
